# prompt-search

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/prompt_search/: cli.py  db.py  extract.py  ingest.py  paths.py  render.py  search.py  util.py
tests/: test_refresh_incremental.py  test_render_highlight.py  test_search_context_and_sort.py
