[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-search"
version = "0.1.0"
description = "Full-text search for Codex session history (~/.codex/sessions) using a local DuckDB database."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "prompt-search contributors" }]
dependencies = [
  "duckdb>=1.4.4",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
prompt-search = "prompt_search.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
