[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-search"
version = "0.1.0"
description = "Full-text search for Codex session history (~/.codex/sessions) using a local DuckDB database."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "prompt-search contributors" }]
keywords = ["cli", "duckdb", "search", "codex"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]
dependencies = [
  "duckdb>=1.4.4",
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.urls]
Repository = "https://github.com/REPLACE_ME/prompt-search"
Issues = "https://github.com/REPLACE_ME/prompt-search/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8",
  "ruff>=0.9.0",
  "twine>=5.1.0",
]

[project.scripts]
prompt-search = "prompt_search.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
